Add header section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
 </head>
 <body>
     <header>
-
+        <!-- navbar section start -->
+        <nav class="navbar flex">
+            <h3 class="nav-title">G3-Architects</h3>
+            <ul class="nav-links flex">
+                <li class="nav-list"><a class="nav-link dark-02" href="">Home</a></li>
+                <li class="nav-list"><a class="nav-link dark-02" href="">About</a></li>
+                <li class="nav-list"><a class="nav-link dark-02" href="">Contact US</a></li>
+                <li class="nav-list"><a class="nav-link dark-02" href="">Login</a></li>
+            </ul>
+        </nav>
+        <!-- navbar section end -->
+        <!-- banner section start -->
+        <div class="banner">
+            <h3 class="banner-title">Brand New Group of Architects</h3>
+            <p class="banner-description description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn">Explore More</button>
+        </div>
+        <div class="banner-img flex">
+            <img src="./images/banner.png" alt="" class="banner-image">
+        </div>
+        <!-- banner section end -->
     </header>
     <main>
 
