--- a/index.html
+++ b/index.html
@@ -31,7 +31,21 @@
         <!-- banner section end -->
     </header>
     <main>
-
+        <section class="section">
+            <div class="container flex">
+                <div class="team-work-images">
+                    <img class="team-work-image" src="./images/team1.png" alt="">
+                    <img class="team-work-image" src="./images/team2.png" alt="">
+                    <img class="team-work-image" src="./images/team3.png" alt="">
+                    <img class="team-work-image" src="./images/team4.png" alt="">
+                </div>
+                <div class="team-work-detail">
+                    <h3 class="team-work-detail-header"><span class="dark-03">Quick list</span> <span class="second-part">of Our</span> <span class="third-part">Features</span></h3>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="btn">Explore More</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
