Add feature section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3-Architects</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
         <!-- navbar section start -->
@@ -22,7 +24,9 @@
         <!-- banner section start -->
         <div class="banner">
             <h3 class="banner-title">Brand New Group of Architects</h3>
-            <p class="banner-description description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <p class="banner-description description">There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by injected humour, or randomised words which
+                don't look even</p>
             <button class="btn">Explore More</button>
         </div>
         <div class="banner-img flex">
@@ -31,6 +35,7 @@
         <!-- banner section end -->
     </header>
     <main>
+        <!-- team work section start -->
         <section class="section">
             <div class="container flex">
                 <div class="team-work-images">
@@ -40,15 +45,74 @@
                     <img class="team-work-image" src="./images/team4.png" alt="">
                 </div>
                 <div class="team-work-detail">
-                    <h3 class="team-work-detail-header"><span class="dark-03">Quick list</span> <span class="second-part">of Our</span> <span class="third-part">Features</span></h3>
-                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <h3 class="team-work-detail-header"><span class="dark-03">Quick list</span> <span
+                            class="second-part">of Our</span> <span class="third-part">Features</span></h3>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words which
+                        don't look even</p>
                     <button class="btn">Explore More</button>
                 </div>
             </div>
         </section>
+        <!-- team work section end -->
+
+        <!-- feature section start -->
+        <section>
+            <div class="feature-container flex">
+                <div class="feature-detail">
+                    <div class="feature-head">
+                        <div class="feature-header flex">
+                            <hr>
+                            <h3 class="feature-heading">Features you will love & enjoy</h3>
+                        </div>
+                        <p class="feature-head-description description">There are many variations of passages of Lorem
+                            Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which don't look even</p>
+                    </div>
+                    <div class="feature-containers">
+                        <div class="feature-container-mini">
+                            <h5 class="feature-container-subtitle">Desktop & Mobile Version</h5>
+                            <p class=" description">There are many variations of passages of Lorem Ipsum available, but
+                                the majority have suffered alteration in some form, by injected humour, or
+                                randomised...........
+                            </p>
+                        </div>
+                        <div class="feature-container-mini">
+                            <h5 class="feature-container-subtitle">Drag & Drop Builder</h5>
+                            <p class="description">There are many variations of passages of Lorem Ipsum available, but
+                                the majority have suffered alteration in some form, by injected humour, or
+                                randomised...........
+                            </p>
+                        </div>
+                        <div class="feature-container-mini">
+                            <h5 class="feature-container-subtitle">Awesome Modern Design</h5>
+                            <p class="description">There are many variations of passages of Lorem Ipsum available, but
+                                the majority have suffered alteration in some form, by injected humour, or
+                                randomised...........
+                            </p>
+                        </div>
+                        <div class="feature-container-mini">
+                            <h5 class="feature-container-subtitle">Super Easy to Edit</h5>
+                            <p class="description">There are many variations of passages of Lorem Ipsum available, but
+                                the majority have suffered alteration in some form, by injected humour, or
+                                randomised...........
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+                <label class="feature-image">
+                    <img src="./images/architect.png" alt="" class="feature-img">
+                    <button class="primary-btn"><span class="experience-year">10+Years</span><br><span class="experience">Experience</span></button>
+                </label>
+            </div>
+        </section>
+        <!-- feature section start -->
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
