--- a/index.html
+++ b/index.html
@@ -72,40 +72,52 @@
                     </div>
                     <div class="feature-containers">
                         <div class="feature-container-mini">
-                            <h5 class="feature-container-subtitle">Desktop & Mobile Version</h5>
-                            <p class=" description">There are many variations of passages of Lorem Ipsum available, but
-                                the majority have suffered alteration in some form, by injected humour, or
-                                randomised...........
-                            </p>
+                            <div class="feature-container-inside">
+                                <h5 class="feature-container-subtitle">Desktop & Mobile Version</h5>
+                                <p class="feature-description description">There are many variations of passages of
+                                    Lorem Ipsum available, but
+                                    the majority have suffered alteration in some form, by injected humour, or
+                                    randomised...........
+                                </p>
+                            </div>
                         </div>
                         <div class="feature-container-mini">
-                            <h5 class="feature-container-subtitle">Drag & Drop Builder</h5>
-                            <p class="description">There are many variations of passages of Lorem Ipsum available, but
-                                the majority have suffered alteration in some form, by injected humour, or
-                                randomised...........
-                            </p>
+                            <div class="feature-container-inside">
+                                <h5 class="feature-container-subtitle">Drag & Drop Builder</h5>
+                                <p class="feature-description description">There are many variations of passages of
+                                    Lorem Ipsum available, but
+                                    the majority have suffered alteration in some form, by injected humour, or
+                                    randomised...........
+                                </p>
+                            </div>
                         </div>
                         <div class="feature-container-mini">
-                            <h5 class="feature-container-subtitle">Awesome Modern Design</h5>
-                            <p class="description">There are many variations of passages of Lorem Ipsum available, but
-                                the majority have suffered alteration in some form, by injected humour, or
-                                randomised...........
-                            </p>
+                            <div class="feature-container-inside">
+                                <h5 class="feature-container-subtitle">Awesome Modern Design</h5>
+                                <p class="feature-description description">There are many variations of passages of
+                                    Lorem Ipsum available, but
+                                    the majority have suffered alteration in some form, by injected humour, or
+                                    randomised...........
+                                </p>
+                            </div>
                         </div>
                         <div class="feature-container-mini">
-                            <h5 class="feature-container-subtitle">Super Easy to Edit</h5>
-                            <p class="description">There are many variations of passages of Lorem Ipsum available, but
-                                the majority have suffered alteration in some form, by injected humour, or
-                                randomised...........
-                            </p>
+                            <div class="feature-container-inside">
+                                <h5 class="feature-container-subtitle">Super Easy to Edit</h5>
+                                <p class="feature-description description">There are many variations of passages of
+                                    Lorem Ipsum available, but
+                                    the majority have suffered alteration in some form, by injected humour, or
+                                    randomised...........
+                                </p>
+                            </div>
                         </div>
                     </div>
-
                 </div>
-                <label class="feature-image">
-                    <img src="./images/architect.png" alt="" class="feature-img">
-                    <button class="primary-btn"><span class="experience-year">10+Years</span><br><span class="experience">Experience</span></button>
-                </label>
+                <div class="feature-image">
+                        <img src="./images/architect.png" alt="" class="feature-img">
+                        <button class="primary-btn"><span class="experience-year">10+Years</span><br><span
+                                class="experience">Experience</span></button>
+                    </div>
             </div>
         </section>
         <!-- feature section start -->
