Add fact section

--- a/index.html
+++ b/index.html
@@ -114,13 +114,74 @@
                     </div>
                 </div>
                 <div class="feature-image">
-                        <img src="./images/architect.png" alt="" class="feature-img">
-                        <button class="primary-btn"><span class="experience-year">10+Years</span><br><span
-                                class="experience">Experience</span></button>
-                    </div>
+                    <img src="./images/architect.png" alt="" class="feature-img">
+                    <button class="primary-btn"><span class="experience-year">10+Years</span><br><span
+                            class="experience">Experience</span></button>
+                </div>
             </div>
         </section>
-        <!-- feature section start -->
+        <!-- feature section end -->
+         <!-- fact section start -->
+
+
+         <section>
+            <div class="fact-container">
+                <div class="fact-detail">
+                    <h3 class="fact-header">Some Facts</h3>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration.</p>
+                </div>
+
+                <div class="fact-badges-container flex">
+                    <div class="fact-badges-box-main">
+                        <div class="fact-badges-box-inside">
+                            <div class="fact-badges-image">
+                                <img class="fact-badges-img" src="./images/icons/ribon.png" alt="">
+                            </div>
+                            <div class="fact-badges-detail">
+                                <h3 class="fact-badges-num">53</h3>
+                                <p class="fact-badges-title">Awards Winnings</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="fact-badges-box-main">
+                        <div class="fact-badges-box-inside">
+                            <div class="fact-badges-image">
+                                <img class="fact-badges-img" src="./images/icons/projects.png" alt="">
+                            </div>
+                            <div class="fact-badges-detail">
+                                <h3 class="fact-badges-num">1458</h3>
+                                <p class="fact-badges-title">Project Finished</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="fact-badges-box-main">
+                        <div class="fact-badges-box-inside">
+                            <div class="fact-badges-image">
+                                <img class="fact-badges-img" src="./images/icons/customers.png" alt="">
+                            </div>
+                            <div class="fact-badges-detail">
+                                <h3 class="fact-badges-num">590</h3>
+                                <p class="fact-badges-title">Client Worked</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="fact-badges-box-main">
+                        <div class="fact-badges-box-inside">
+                            <div class="fact-badges-image">
+                                <img class="fact-badges-img" src="./images/icons/email.png" alt="">
+                            </div>
+                            <div class="fact-badges-detail">
+                                <h3 class="fact-badges-num">22578</h3>
+                                <p class="fact-badges-title">Email Send</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </section>
+
+
+         <!-- fact section end -->
     </main>
     <footer>
 
