--- a/index.html
+++ b/index.html
@@ -122,13 +122,11 @@
         </section>
         <!-- feature section end -->
          <!-- fact section start -->
-
-
          <section>
             <div class="fact-container">
                 <div class="fact-detail">
                     <h3 class="fact-header">Some Facts</h3>
-                    <p class="description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration.</p>
+                    <p class="fact-description description">There are many variations of passages of Lorem Ipsum available, <br class="break"> but the majority have suffered alteration.</p>
                 </div>
 
                 <div class="fact-badges-container flex">
