Add sopnsor section

--- a/index.html
+++ b/index.html
@@ -177,9 +177,24 @@
                 </div>
             </div>
          </section>
-
-
          <!-- fact section end -->
+          <!-- sponsor section start -->
+
+         <section>
+            <div class="sponsors">
+                <h3 class="sponsor-header">Our Sponspors</h3>
+                <p class="sopnsor-description description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsors-images flex">
+                <img class="sponsors-img" src="./images/sponsors/spotify.png" alt="">
+                <img class="sponsors-img" src="./images/sponsors/amazon.png" alt="">
+                <img class="sponsors-img" src="./images/sponsors/google.png" alt="">
+                <img class="sponsors-img" src="./images/sponsors/telerama.png" alt="">
+                <img class="sponsors-img" src="./images/sponsors/figma.png" alt="">
+            </div>
+         </section>
+
+          <!-- sponsor section end -->
     </main>
     <footer>
 
