Add footer section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="color">
         <!-- navbar section start -->
         <nav class="navbar flex">
             <h3 class="nav-title">G3-Architects</h3>
@@ -179,7 +179,6 @@
          </section>
          <!-- fact section end -->
           <!-- sponsor section start -->
-
          <section>
             <div class="sponsors">
                 <h3 class="sponsor-header">Our Sponspors</h3>
@@ -193,11 +192,12 @@
                 <img class="sponsors-img" src="./images/sponsors/figma.png" alt="">
             </div>
          </section>
-
           <!-- sponsor section end -->
     </main>
     <footer>
-
+        <div class="footer color">
+            <p class="footer-text dark-02">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 </body>
 
